@@ -51,6 +51,9 @@
 #  include <unistd.h>
 #endif
 
+#ifdef WIN32
+#include <windows.h>
+#endif // WIN32
 
 char Fl_Preferences::nameBuffer[128];
 
